# MRL-AtWork-Robotics-Team

./: README.md
Internship Tasks/: .gitignore
Internship Tasks/Face Direction/: FaceDirection.py  README.md
Internship Tasks/Object Detection/: ObjDetection.py  ObjDetectionColorMask.py  ObjDetectionPhotoshot.py
Internship Tasks/Object Placement/: README.md  Readme.txt
Internship Tasks/Object Placement/BackgroundDetection/: BACKUP.py  BDA_ImageList.py  BDA_video.py  BD_DOG_v1.1.py  BD_DOG_v1.py  BD_GNG.py  BD_GSOC.py  BD_KNN.py  BD_MOG2.py  tools.py
Internship Tasks/Object Placement/ObjectDetection/: main.py  multiple_threshold_algs.py  single_frame_process.py  temp.py
Internship Tasks/PPT/: README.md  Untitled (1).tex  Untitled.ipynb  arm_services_class.py  main.py  mainnn.ipynb  readme.md  requirements.txt  vertopal.com_Untitled.doc
Internship Tasks/PPT/PPT_bbox_classifier/: bbox_classifier.py
Internship Tasks/PPT/bbox_classification/: bbox_classifier.py  boundingBox_detector.py  boundingBox_detector_ros copy.py
Internship Tasks/PPT/bbox_classification/notebooks/: classification_EfficientNetV2B0.ipynb  classification_MobileNetV2.ipynb  classification_VGG16.ipynb  hamzeh_classification-Copy1.ipynb  hamzeh_classification.ipynb
Internship Tasks/PPT/dev/: BBox_ds_d435.py  BBox_ds_sr300.py  bbox_classifier copy.py  bbox_classifier_jn.py  depth.py  transferLearning_EfficientNetB0.py
Internship Tasks/PPT/dev/dev_models/: Untitled.ipynb  transferLearning_EfficientNetB0.ipynb  transferLearning_EfficientNetV2.ipynb  transferLearning_EfficientNetV2_v2.ipynb
Internship Tasks/PPT/labelling/: boundingBox_detector.py
Internship Tasks/Tools/: Canva.lnk  TrackbarHSV.py  TrackbarStuff.py  deee.ipynb  depth_fullModule.py  desktop.ini  draw_contour.py  frames_to_vid.py  image_to_video.py  openfile.py  plotDisplay  readROSbag.py  readimage.py  resource.py  temp.ipynb
Main Tasks/AtWork Central Factory Hub Doc/: Makefile  cfh_manual.tex
Main Tasks/AtWork Commander/atwork_commander_gen/config/: ATT1.yaml
Main Tasks/AtWork Refbox Comm/: .gitignore  .gitmodules  CMakeLists-bkup.txt  README.md
Main Tasks/AtWork Refbox Comm/atwork_pb_msgs/: CMakeLists.txt  README.md  package.xml
Main Tasks/AtWork Refbox Comm/atwork_refbox_comm/: CMakeLists.txt  package.xml
Main Tasks/AtWork Refbox Comm/atwork_ros_msgs/: CMakeLists.txt  README.md  package.xml
Main Tasks/AtWork Refbox Comm/atwork_ros_msgs/msg/: AttentionMessage.msg  BenchmarkFeedback.msg  BenchmarkScenario.msg  BenchmarkState.msg  Inventory.msg  Item.msg  LocationIdentifier.msg  LoggingStatus.msg  NavigationTask.msg  ObjectIdentifier.msg  RobotStatus.msg  RobotStatusReport.msg  Task.msg  TaskInfo.msg  Transaction.msg  TransportationTask.msg  TriggeredConveyorBeltCommand.msg  TriggeredConveyorBeltStatus.msg
Main Tasks/AtWork Refbox Comm/protobuf_comm/: CMakeLists.txt  README.md  package.xml
Main Tasks/AtWork Refbox ROS Client/: CMakeLists.txt  README.md
Main Tasks/AtWork Refbox ROS Client/ros/include/atwork_robot_example_ros/: robot_example_ros.h
Main Tasks/AtWork Refbox ROS Client/ros/launch/: robot_example_ros.launch
Main Tasks/AtWork Refbox ROS Client/ros/src/: robot_example_ros.cpp  robot_example_ros_node.cpp
Main Tasks/Missions/: README.md
Main Tasks/Missions/vision/: README.md  evaluate_detection.py
Main Tasks/Models/arena/elements/devices/rotating_turntable/stl/: rotating_table_shaft_supported_assembly.stl
Main Tasks/RuleBook/competition/: Competition.tex
Main Tasks/RuleBook/general_rules/: At_Work_in_a_Nutshell.tex  Change_log.tex  General_Design.tex  Organization_of_the_League.tex  Participation_int_the_Competition.tex  Scoring_and_Ranking.tex  Virtual_RoboCup.tex
Main Tasks/RuleBook/pages/: titlepage.tex
Main Tasks/RuleBook/setup/: active_version.tex
Main Tasks/RuleBook/technical_challenges/: CoworkerAssemblyChallenge.tex  MasterCtrlCom.tex
Main Tasks/RuleBook/tests/: BTT.tex  Final.tex  New_Test_Structure.tex  Specs.tex  Tests.tex
