<?xml version="1.0"?>
<package>
  <name>atwork_pb_msgs</name>
  <version>0.0.1</version>
  <description>RoboCup@Work Messages Package. These are the R@W Protobuf messages, not ROS messages</description>

  <maintainer email="alexander.moriarty@brsu.de">Alexander Moriarty</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
